--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ Django==3.2.4
 gunicorn==20.1.0
 pdfkit==0.6.1
 Pillow==8.2.0
-
+pkg-resources==0.0.0
 pycodestyle==2.7.0
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
 typing-extensions==3.10.0.0
+whitenoise==5.2.0
